# pyvsnr

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
examples/: examples.py
examples/data/: camera_curtains.tif
src/: filters.py  utils.py
src/old/: vsnr_0.py
src/pyvsnr/: __init__.py  examples.py  install_cupy.py  tests.py  utils.py  vsnr.py  vsnr2d.cu  vsnr2d.py  vsnr2d_batch.py  vsnr2d_cuda.py  vsnr2d_single.py
src/pyvsnr/data/: camera.tif  camera_stripes.tif
src/pyvsnr/precompiled/: compile_cuda.sh
tests/: batch.ipynb  benchmarks.ipynb  notebook.ipynb  pyvsnr_prof.py  speedtests.ipynb  test_batch.py  test_core.py  test_cuda_equals_py.py  utils.py
tests/TEST_CREATE_FILTERS/: compile_cuda.sh  out.txt  save_filter  save_filter.cu
tests/TEST_VSNR_ADMM/: camera.txt  compile_cuda.sh  out.txt  u0.txt  vsnr_admm  vsnr_admm.cu
