[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyvsnr"
version = "2.3.0"
description = "VSNR (Variational Stationary Noise Remover) algorithm in python"
authors = ["Killian Pavy <killian.pavy@cea.fr>", "Patrick Quemere <patrick.quemere@cea.fr>"]
license = "AGPL-3.0-only"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
repository = "https://github.com/CEA-MetroCarac/pyvsnr"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
pyfftw = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[[tool.poetry.source]]
name = "pyvsnr"
url = "https://github.com/CEA-MetroCarac/pyvsnr"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

