[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvsnr"
version = "2.3.1"
description = "VSNR (Variational Stationary Noise Remover) algorithm in python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", 
    "pyfftw"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
repository = "https://github.com/CEA-MetroCarac/pyvsnr"
