[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvsnr"
version = "2.3.1"
description = "VSNR (Variational Stationary Noise Remover) algorithm in python"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", 
    "pyfftw"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
repository = "https://github.com/CEA-MetroCarac/pyvsnr"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pyvsnr" = ["vsnr2d.cu", "precompiled/*"]