[metadata]
name = pyvsnr
version = 0.0.1
description = VSNR algorithm for image destripping
long_description = file: README.rst
url = https://github.com/patquem/pyvsnr
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src