[metadata]
name = pyVSNR
version = 1.0.0
description = VSNR algorithm for image destripping
long_description = file: README.rst
url = https://github.com/patquem/pyvsnr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src