[metadata]
name = pyvsnr
version = 1.0.19
maintainer = Patrick QUEMERE
maintainer_email = patrick.quemere@cea.fr
description = VSNR algorithm for image destripping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patquem/pyvsnr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    tifffile


[options.packages.find]
where = src

[options.data_files]
data = src/pyvsnr/data/*.tif, src/pyvsnr/data/*.png